test/testdata/base/accesslogconfig-file-auto-generated-filename.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: AccessLogConfig
metadata:
  name: file-auto-generated-filename
  annotations:
    envoy.kaasops.io/auto-generated-filename: "true"
spec:
  name: envoy.access_loggers
  typed_config:
    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
    path: /tmp
    log_format:
      json_format:
        message: "%LOCAL_REPLY_BODY%"
        status: "%RESPONSE_CODE%"
        duration: "%DURATION%"
        remote_address: "%DOWNSTREAM_REMOTE_ADDRESS%"
        x_real_ip: "%REQ(X-Real-IP)%"
        request_start_time: "%START_TIME%"
        bytes_sent: "%BYTES_SENT%"
        http_referer: "%REQ(Referer)%"
        http_user_agent: "%REQ(User-Agent)%"
