test/testdata/base/accesslogconfig-stderr.yaml
# Default setting for collect and send logs to cluster otelcol-logs (local instance Opentelemetry Collector)
apiVersion: envoy.kaasops.io/v1alpha1
kind: AccessLogConfig
metadata:
  name: stderr
spec:
  name: envoy.access_loggers
  typed_config:
    "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog
    log_format:
      json_format:
        type: "request"
        protocol: "%PROTOCOL%"
        method: "%REQ(:METHOD)%"
        path: "%REQ(:path)%"
        responseCode: "%RESPONSE_CODE%"
        duration: "%DURATION%"
        CONNECTION_TERMINATION_DETAILS: "%CONNECTION_TERMINATION_DETAILS%"
        UPSTREAM_CLUSTER: "%UPSTREAM_CLUSTER%"
        UPSTREAM_HOST: "%UPSTREAM_HOST%"
        UPSTREAM_LOCAL_ADDRESS: "%UPSTREAM_LOCAL_ADDRESS%"
        UPSTREAM_TRANSPORT_FAILURE_REASON: "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
      omit_empty_values: true
