test/testdata/base/cluster-static2.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Cluster
metadata:
  name: static2
  annotations:
    envoy.kaasops.io/node-id: test1,test2
spec:
  name: static2
  connect_timeout: 1s
  lb_policy: LEAST_REQUEST
  type: STATIC
  load_assignment:
    cluster_name: static
    endpoints:
    - lb_endpoints:
      - endpoint:
          address:
            socket_address:
              address: 127.0.0.1
              port_value: 8765
