test/testdata/base/policy-allow-all.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Policy
metadata:
  name: my-policy
spec:
  permissions:
    - any: true
  principals:
    - any: true
