test/testdata/base/route-blocks.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Route
metadata:
  name: blocks
spec:
  - name: composer-json
    match:
      path: "/composer.json"
    direct_response:
      status: 404
  - name: package.json
    match:
      path: "/package.json"
    direct_response:
      status: 404
  - name: metrics
    match:
      prefix: "/metrics"
    direct_response:
      status: 404
