test/testdata/base/route-default.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Route
metadata:
  name: default-pass
spec:
  - name: default-pass
    match:
      prefix: "/"
    route:
      cluster: static
