test/testdata/base/route-static.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Route
metadata:
  name: static
spec:
  - name: static
    match:
      path: "/static.json"
    direct_response:
      status: 200
      body: 
        inline_string: "{\"answer\":\"true\"}"
